[gd_scene load_steps=19 format=2]

[ext_resource path="res://PNG/GUI/grey_panel.png" type="Texture" id=1]
[ext_resource path="res://PNG/GUI/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://PNG/GUI/green_button02.png" type="Texture" id=3]
[ext_resource path="res://PNG/GUI/green_button03.png" type="Texture" id=4]
[ext_resource path="res://PNG/GUI/Fonts/Kenney Mini.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://PNG/GUI/red_button00.png" type="Texture" id=6]
[ext_resource path="res://PNG/GUI/red_button13.png" type="Texture" id=7]
[ext_resource path="res://PNG/GUI/red_button06.png" type="Texture" id=8]
[ext_resource path="res://PNG/GUI/red_button07.png" type="Texture" id=9]
[ext_resource path="res://PNG/GUI/pause.png" type="Texture" id=10]
[ext_resource path="res://UI.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=4]
action = "ui_accept"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 5 )

[sub_resource type="InputEventAction" id=8]
action = "ui_cancel"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 12 )
__meta__ = {
"_edit_horizontal_guides_": [ 360.0 ],
"_edit_vertical_guides_": [ 640.0 ]
}

[node name="Panel" type="TextureRect" parent="."]
margin_left = 448.0
margin_top = 168.0
margin_right = 832.0
margin_bottom = 552.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 376.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0.278431, 0.513726, 0.172549, 1 )
custom_fonts/font = SubResource( 1 )
text = "Solitaire"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 512.0
margin_top = 360.0
margin_right = 768.0
margin_bottom = 424.0
focus_mode = 0
shortcut_in_tooltip = false
button_mask = 3
enabled_focus_mode = 0
shortcut = SubResource( 5 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StartButton"]
margin_left = 8.0
margin_right = 248.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 6 )
text = "START"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 512.0
margin_top = 440.0
margin_right = 768.0
margin_bottom = 504.0
focus_mode = 0
shortcut_in_tooltip = false
button_mask = 3
enabled_focus_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CloseButton"]
margin_left = 8.0
margin_right = 248.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 6 )
text = "CLOSE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Signature" type="Label" parent="."]
margin_left = 1120.0
margin_top = 584.0
margin_right = 1276.0
margin_bottom = 635.0
custom_fonts/font = SubResource( 7 )
text = "Made by A.Puyet
Art from kenney.nl"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="TextureButton" parent="."]
margin_left = 64.0
margin_top = 576.0
margin_right = 128.0
margin_bottom = 640.0
focus_mode = 0
shortcut_in_tooltip = false
button_mask = 3
enabled_focus_mode = 0
shortcut = SubResource( 9 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="RestartButton"]
margin_left = 8.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 48.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
